--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -1,10 +1,15 @@
 {
   "cSpell.words": [
     "Beyoncé",
+    "TODOs",
+    "clippy's",
+    "consts",
     "icecream",
     "icecreams",
+    "joinhandles",
     "nametag",
     "parseint",
+    "powi",
     "rfold",
     "there'll"
   ]
